[workspace]
members = [
    "macro_definitions",
    "."
]
[package]
name = "simple-redis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
bytes = "1.6.0"
enum_dispatch = "0.3.13"
futures = "0.3.30"
thiserror = "1.0.59"
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "net", "tokio-macros", "macros"] }
tokio-util = { version = "0.7.11", features = ["codec"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
dashmap = "5.5.3"
lazy_static = "1.4.0"
macro_definitions = { path = "macro_definitions" }
